testsuite/tests/interpreter_errors/invalid_is_clause_left_operand/test.out
main.adb
script:1:18: error: Type error: expected Node but got Str
1 | query p @ _ when "Hello" is ObjectDecl
  |                  ^^^^^^^ 

